// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/SearchBox.vue { locale: "en" } snapshot test { loading: false, term: "" } renders empty box 1`] = `
<div class="autocomplete control">
  <div class="control has-icons-left  is-clearfix"><input type="text" autocomplete="off" aria-autocomplete="list" placeholder="Find by Song/Artist name" class="input"><span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
    <!---->
    <!---->
  </div>
  <transition-stub name="fade">
    <div class="dropdown-menu" style="display: none;">
      <div class="dropdown-content" style="display: none;">
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`/components/pages/SearchBox.vue { locale: "en" } snapshot test { loading: true } renders loading spin 1`] = `
<div class="autocomplete control">
  <div class="control has-icons-left has-icons-right is-loading is-clearfix"><input type="text" autocomplete="off" aria-autocomplete="list" placeholder="Find by Song/Artist name" class="input"><span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
    <!---->
    <!---->
  </div>
  <transition-stub name="fade">
    <div class="dropdown-menu" style="display: none;">
      <div class="dropdown-content" style="display: none;">
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`/components/pages/SearchBox.vue { locale: "ja" } snapshot test { loading: false, term: "" } renders empty box 1`] = `
<div class="autocomplete control">
  <div class="control has-icons-left  is-clearfix"><input type="text" autocomplete="off" aria-autocomplete="list" placeholder="曲名/アーティスト名から探す" class="input"><span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
    <!---->
    <!---->
  </div>
  <transition-stub name="fade">
    <div class="dropdown-menu" style="display: none;">
      <div class="dropdown-content" style="display: none;">
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`/components/pages/SearchBox.vue { locale: "ja" } snapshot test { loading: true } renders loading spin 1`] = `
<div class="autocomplete control">
  <div class="control has-icons-left has-icons-right is-loading is-clearfix"><input type="text" autocomplete="off" aria-autocomplete="list" placeholder="曲名/アーティスト名から探す" class="input"><span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
    <!---->
    <!---->
  </div>
  <transition-stub name="fade">
    <div class="dropdown-menu" style="display: none;">
      <div class="dropdown-content" style="display: none;">
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;
